feat: :sparkles: add the ability to change password
